add readme.md format all files in eclipse